--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,11 @@ version: '3.3'
 services:
   text-classifier: 
     build: 
-      context: ./
+      context: ./serve
       dockerfile: Dockerfile
     container_name: text-classifier
+    environment:
+      - MODEL_PATH=model.p
     restart: unless-stopped
     ports: 
       - "8080:8080"
